# ChangeLog for dev-libs/boost
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.134 2008/04/24 15:01:21 dev-zero Exp $

*boost-1.35.0 (24 Apr 2008)

  24 Apr 2008; Tiziano Müller <dev-zero@gentoo.org> +boost-1.35.0.ebuild:
  Version bump (but not finished yet).

  05 Feb 2008; Samuli Suominen <drac@gentoo.org> boost-1.34.1-r2.ebuild:
  amd64 stable wrt security #205955

  04 Feb 2008; Fabian Groffen <grobian@gentoo.org> boost-1.33.1.ebuild,
  boost-1.33.1-r1.ebuild:
  Drop ppc-macos conditionals

  26 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  boost-1.34.1-r2.ebuild:
  ppc stable, bug #205955

  26 Jan 2008; Jeroen Roovers <jer@gentoo.org> boost-1.34.1-r2.ebuild:
  Stable for HPPA (bug #205955).

  25 Jan 2008; Markus Rothe <corsair@gentoo.org> boost-1.34.1-r2.ebuild:
  Stable on ppc64; bug #205955

  25 Jan 2008; Raúl Porcel <armin76@gentoo.org> boost-1.34.1-r2.ebuild:
  alpha/ia64/sparc stable wrt security #205955

  24 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  boost-1.34.1-r2.ebuild:
  stable x86, security bug 205955

  24 Jan 2008; Tiziano Müller <dev-zero@gentoo.org> boost-1.34.1-r2.ebuild:
  Changed for updated tarball (one patch had DOS line endings).

*boost-1.34.1-r2 (24 Jan 2008)

  24 Jan 2008; Tiziano Müller <dev-zero@gentoo.org>
  +boost-1.34.1-r2.ebuild:
  Fixed bug #205955.

*boost-1.34.1-r1 (24 Dec 2007)

  24 Dec 2007; Tiziano Müller <dev-zero@gentoo.org>
  -files/boost-1.34.0-gcc42-atomicity.h.patch, -boost-1.34.0-r1.ebuild,
  -boost-1.34.1.ebuild, +boost-1.34.1-r1.ebuild:
  Added patch to fix a critical bug in Boost.Function and another one to fix a
  missing include showing up with gcc-4.3 (both bug #202964). Dropped old
  version and old revisions.

  18 Nov 2007; Tiziano Müller <dev-zero@gentoo.org> boost-1.34.1.ebuild:
  Fixed broken links in documentation (bug #194789) and added '-q' to the bjam