@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/boost
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.134 2008/04/24 15:01:21 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.135 2008/06/05 20:33:53 dev-zero Exp $
+
+*boost-1.35.0-r1 (05 Jun 2008)
+
+  05 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> -boost-1.35.0.ebuild,
+  +boost-1.35.0-r1.ebuild:
+  Removed pyste and added expat, mpi USE-flags. Reworked the way we call the
+  build system. Updated patchset to work around expat and mpi build
+  problems.
 
 *boost-1.35.0 (24 Apr 2008)
 
